namespace BE
{
    public class CONTROL_IDIOMA
    {
        public int Id { get; set; }
        public string Clave { get; set; }
        public string TextoDefault { get; set; }
        public string TextoTraduccion { get; set; }
    }
}
