@startuml DER - BDCAPAS

skinparam linetype ortho
hide empty methods

entity USUARIO {
  * ID : INT <<PK>>
  --
  USUARIO : VARCHAR(50)
  PASS : VARCHAR(64)
  INTENTOS_FALLIDOS : INT
  BLOQUEADO : BIT
  ROL : VARCHAR(20)
  ROL_ID : INT <<FK, nullable>>
  DVH : INT
  NOMBRE : VARCHAR(50) <<nullable>>
  APELLIDO : VARCHAR(50) <<nullable>>
  IDIOMA_ID : INT <<FK, nullable>>
  TELEFONO : VARCHAR(30) <<nullable>>
  EMAIL : VARCHAR(100) <<nullable>>
}

entity ROL {
  * ID : INT <<PK>>
  --
  NOMBRE : VARCHAR(100)
  PADRE_ID : INT <<FK, nullable>>
  PROTEGIDO : BIT
}

entity PERMISO {
  * ID : INT <<PK>>
  --
  NOMBRE : VARCHAR(100)
}

entity USUARIO_PERFIL {
  * USUARIO_ID : INT <<PK, FK>>
  * PERFIL_ID : INT <<PK, FK>>
}

entity ROL_PERMISO {
  * ROL_ID : INT <<PK, FK>>
  * PERMISO_ID : INT <<PK, FK>>
}

entity BITACORA {
  * ID : INT <<PK>>
  --
  USUARIO : VARCHAR(50)
  ACCION : VARCHAR(50)
  FECHA : DATETIME
}

entity IDIOMA {
  * ID : INT <<PK>>
  --
  NOMBRE : VARCHAR(50)
  HABILITADO : BIT
}

entity CONTROL_IDIOMA {
  * ID : INT <<PK>>
  --
  CLAVE : VARCHAR(100)
  TEXTO_DEFAULT : VARCHAR(200)
}

entity TRADUCCION {
  * IDIOMA_ID : INT <<PK, FK>>
  * CONTROL_ID : INT <<PK, FK>>
  --
  TEXTO : VARCHAR(200)
}

entity USUARIO_HISTORIAL {
  * ID : INT <<PK>>
  --
  USUARIO_ID : INT
  USUARIO_LOGIN : VARCHAR(50)
  ROL : VARCHAR(20)
  ROL_ID : INT <<nullable>>
  BLOQUEADO : BIT
  INTENTOS_FALLIDOS : INT
  PERFILES : VARCHAR(500)
  NOMBRE : VARCHAR(50) <<nullable>>
  APELLIDO : VARCHAR(50) <<nullable>>
  TELEFONO : VARCHAR(30) <<nullable>>
  EMAIL : VARCHAR(100) <<nullable>>
  FECHA_CAMBIO : DATETIME
  REALIZADO_POR : VARCHAR(50)
  TIPO_CAMBIO : VARCHAR(25)
  VERSION_ORIGEN : INT <<nullable>>
}

entity DIGITO_VERIFICADOR_VERTICAL {
  * TABLA : VARCHAR(50) <<PK>>
  * COLUMNA : VARCHAR(50) <<PK>>
  --
  DVV : INT
}

entity BODEGA {
  * ID : INT <<PK>>
  --
  NOMBRE : VARCHAR(100) <<unique>>
  PAIS : VARCHAR(50)
  REGION : VARCHAR(50) <<nullable>>
  HABILITADO : BIT
}

entity VINO {
  * ID : INT <<PK>>
  --
  CODIGO : VARCHAR(20) <<unique>>
  NOMBRE : VARCHAR(100)
  BODEGA_ID : INT <<FK>>
  VARIETAL : VARCHAR(50)
  ANIADA : INT
  PRECIO : DECIMAL(10,2)
  STOCK_MINIMO : INT
  ESTADO : VARCHAR(15)
  MARIDAJE : VARCHAR(200) <<nullable>>
  PUNTAJE : INT <<nullable>>
  CREADO_POR : INT <<FK>>
  FECHA_ALTA : DATETIME
  AUTORIZADO_POR : INT <<FK, nullable>>
  FECHA_AUTORIZACION : DATETIME <<nullable>>
  BAJA_SOLICITADA_POR : INT <<FK, nullable>>
  FECHA_SOLICITUD_BAJA : DATETIME <<nullable>>
  DESCONTINUADO_POR : INT <<FK, nullable>>
  FECHA_DESCONTINUACION : DATETIME <<nullable>>
}

entity MOVIMIENTO_STOCK {
  * ID : INT <<PK>>
  --
  VINO_ID : INT <<FK>>
  FECHA : DATETIME
  TIPO : VARCHAR(10)
  CANTIDAD : INT
  MOTIVO : VARCHAR(100)
  RESPONSABLE : VARCHAR(50)
  REFERENCIA_TIPO : VARCHAR(20) <<nullable>>
  REFERENCIA_ID : INT <<nullable>>
}

USUARIO        ||--o{ USUARIO_PERFIL  : "tiene >"
ROL            ||--o{ USUARIO_PERFIL  : "< rol asignado a"
ROL            ||--o{ ROL_PERMISO     : "ROL_ID >"
PERMISO        ||--o{ ROL_PERMISO     : "< PERMISO_ID"
ROL            ||--o{ ROL             : "PADRE_ID (autoref) >"
ROL            ||--o{ USUARIO         : "ROL_ID >"
IDIOMA         ||--o{ USUARIO         : "IDIOMA_ID >"
IDIOMA         ||--o{ TRADUCCION      : "tiene >"
CONTROL_IDIOMA ||--o{ TRADUCCION      : "< traduce"

USUARIO        ..o{ USUARIO_HISTORIAL : "referencia logica >"

BODEGA  ||--o{ VINO             : "BODEGA_ID >"
VINO    ||--o{ MOVIMIENTO_STOCK : "VINO_ID >"
USUARIO ||--o{ VINO             : "CREADO_POR >"
USUARIO ||--o{ VINO             : "AUTORIZADO_POR >"
USUARIO ||--o{ VINO             : "BAJA_SOLICITADA_POR >"
USUARIO ||--o{ VINO             : "DESCONTINUADO_POR >"

@enduml
